src/objects/Associated_Product__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Vehicle_Unique__c</fullName>
        <externalId>true</externalId>
        <label>Contract_Vehicle_Unique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Associated Products</relationshipLabel>
        <relationshipName>Associated_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles_Commited__c</fullName>
        <label>Number of Vehicles Committed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles_Purchased__c</fullName>
        <label>Number of Vehicles Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles_remaining__c</fullName>
        <formula>Number_of_Vehicles_Commited__c -  Number_of_Vehicles_Purchased__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Vehicles remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Associated Products</relationshipLabel>
        <relationshipName>Associated_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Associated Product</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Associated Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>